<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/menuLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonWorkoutList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/picture_of_weight"
            android:src="@drawable/weight2"
            tools:ignore="RedundantDescriptionCheck,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButtonLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/picture_of_log"
            android:src="@drawable/woodlog"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/setting"
            android:src="@drawable/settings"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <ScrollView

        android:id="@+id/scrollViewSettings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/menuLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".SettingsActivity">


            <TextView
                android:id="@+id/workoutSortby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/textView_workout_sort_by"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroupSortBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@+id/workoutSortby"
                app:layout_constraintTop_toBottomOf="@id/workoutSortby">

                <RadioButton
                    android:id="@+id/radioLiftName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radiobtn_lift_name" />

                <RadioButton
                    android:id="@+id/radioMaxWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtn_max_weight" />
            </RadioGroup>

            <TextView
                android:id="@+id/workoutSortOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="20dp"
                android:text="@string/textView_workout_sort_order"
                app:layout_constraintStart_toEndOf="@id/workoutSortby"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroupSortOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@+id/workoutSortOrder"
                app:layout_constraintTop_toBottomOf="@id/workoutSortOrder">

                <RadioButton
                    android:id="@+id/radioAscending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtn_ascending"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <RadioButton
                    android:id="@+id/radioDescending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtn_descending"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </RadioGroup>


            <RadioGroup
                android:id="@+id/radioGroupLogSortBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/logSortByTextview"
                app:layout_constraintStart_toStartOf="@+id/logSortByTextview"
                app:layout_constraintTop_toBottomOf="@+id/logSortByTextview">

                <RadioButton
                    android:id="@+id/radioLogLiftName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_lift_name"
                    tools:layout_editor_absoluteX="56dp"
                    tools:layout_editor_absoluteY="229dp" />

                <RadioButton
                    android:id="@+id/radioLogDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_date"
                    tools:layout_editor_absoluteX="56dp"
                    tools:layout_editor_absoluteY="277dp" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupLogSortOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/logSortOrder"
                app:layout_constraintStart_toStartOf="@+id/logSortOrder"
                app:layout_constraintTop_toBottomOf="@+id/logSortOrder">

                <RadioButton
                    android:id="@+id/radioLogAscending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtn_ascending" />

                <RadioButton
                    android:id="@+id/radioLogDescending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtn_descending" />
            </RadioGroup>

            <TextView
                android:id="@+id/logSortByTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="144dp"
                android:text="@string/log_sort_by"
                app:layout_constraintEnd_toEndOf="@+id/workoutSortby"
                app:layout_constraintHorizontal_bias="0.461"
                app:layout_constraintStart_toStartOf="@+id/workoutSortby"
                app:layout_constraintTop_toBottomOf="@+id/workoutSortby" />

            <TextView
                android:id="@+id/logSortOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="144dp"
                android:text="@string/log_sort_order"
                app:layout_constraintEnd_toEndOf="@+id/workoutSortOrder"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="@+id/workoutSortOrder"
                app:layout_constraintTop_toBottomOf="@+id/workoutSortOrder" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>